feat: implement correct OCI approach for Bitnami Redis
- Use OCIRepository with semver range (>=18.0.0 <19.0.0) for automatic patch updates
- Replace chart.spec with chartRef for OCIRepository reference (correct syntax)
- Maintain existing Redis configuration and secret management integration
- This follows Flux best practices for OCI chart management post-Bitnami transition

--- a/software/components/redis-infrastructure/release.yaml
+++ b/software/components/redis-infrastructure/release.yaml
@@ -7,14 +7,10 @@ metadata:
     hostk8s.component: redis-infrastructure
 spec:
   interval: 5m
-  chart:
-    spec:
-      chart: redis
-      version: "17.15.6"  # Pin to much older pre-OCI version
-      sourceRef:
-        kind: HelmRepository
-        name: bitnami
-        namespace: flux-system
+  chartRef:
+    kind: OCIRepository
+    name: redis-bitnami
+    namespace: flux-system
   values:
     # Architecture - simple replication for development
     architecture: standalone
