fix: correct Redis Commander env values format to array
- Convert env from object to array format as expected by Helm chart schema
- Fix 'Invalid type. Expected: array, given: object' error
- Maintain proper secret reference for HTTP_USER and HTTP_PASSWORD
- This should resolve the Redis Commander HelmRelease deployment issue

--- a/software/components/redis-infrastructure/release.yaml
+++ b/software/components/redis-infrastructure/release.yaml
@@ -111,16 +111,17 @@ spec:
     # Redis connection
     hosts: "redis:6379"  # Connect to Bitnami Redis service
 
-    # Environment variables from secret
+    # Environment variables from secret (array format)
     env:
-      HTTP_USER:
+      - name: HTTP_USER
         valueFrom:
           secretKeyRef:
             name: redis-commander-credentials
             key: username
-      HTTP_PASSWORD:
+      - name: HTTP_PASSWORD
         valueFrom:
           secretKeyRef:
             name: redis-commander-credentials
             key: password
-      K8S_SIGTERM: "1"
+      - name: K8S_SIGTERM
+        value: "1"
