feat: update sample-app worker to use new Bitnami Redis service
- Change REDIS_HOST from legacy 'redis' to new 'redis-master' service
- Worker will now connect to Bitnami Redis 18.19.4 via OCIRepository
- Completes the Redis service migration for sample-app functionality

--- a/software/stacks/sample-app/manifests/worker-deployment.yaml
+++ b/software/stacks/sample-app/manifests/worker-deployment.yaml
@@ -24,7 +24,7 @@ spec:
         image: localhost:5000/hostk8s-worker:latest
         env:
         - name: REDIS_HOST
-          value: "redis.redis-infrastructure.svc.cluster.local"
+          value: "redis-master.redis-infrastructure.svc.cluster.local"
         - name: REDIS_PORT
           value: "6379"
         - name: POSTGRES_HOST
