--- a/software/stacks/sample-app/manifests/vote-deployment.yaml
+++ b/software/stacks/sample-app/manifests/vote-deployment.yaml
@@ -31,7 +31,7 @@ spec:
         - name: OPTION_B
           value: "HostK8s App"
         - name: REDIS_HOST
-          value: "redis.redis-infrastructure.svc.cluster.local"
+          value: "redis-master.redis-infrastructure.svc.cluster.local"
         - name: REDIS_PORT
           value: "6379"
         resources:
