refactor: simplify Redis component structure
- Rename redis-infrastructure to redis for cleaner organization
- Remove 7 legacy manual manifest files (deployment, service, configmap, pvc)
- Keep only Helm-based files: source.yaml, release.yaml, namespace.yaml, kustomization.yaml
- Update component references in stack.yaml and documentation
- Maintain redis-infrastructure namespace for service continuity

--- a/software/stacks/sample-app/stack.yaml
+++ b/software/stacks/sample-app/stack.yaml
@@ -29,7 +29,7 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: component-redis-infrastructure
+  name: component-redis
   namespace: flux-system
   labels:
     hostk8s.stack: sample-app
@@ -41,7 +41,7 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
-  path: ./software/components/redis-infrastructure
+  path: ./software/components/redis
   prune: true
   wait: true
   healthChecks:
@@ -67,7 +67,7 @@ metadata:
 spec:
   dependsOn:
     - name: component-postgres
-    - name: component-redis-infrastructure
+    - name: component-redis
   interval: 1h
   retryInterval: 1m
   timeout: 5m
