--- a/software/components/redis/kustomization.yaml
+++ b/software/components/redis/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 metadata:
-  name: redis-infrastructure
+  name: redis
   annotations:
     component.hostk8s.io/description: "Redis infrastructure component with management UI"
     component.hostk8s.io/version: "1.0.0"
@@ -13,4 +13,4 @@ resources:
   - release.yaml
 
 commonLabels:
-  hostk8s.component: redis-infrastructure
+  hostk8s.component: redis
