--- a/software/components/postgres/kustomization.yaml
+++ b/software/components/postgres/kustomization.yaml
@@ -2,7 +2,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - component.yaml
+  - source.yaml
+  - release.yaml
 
 commonLabels:
   hostk8s.component: postgres
+  component.hostk8s.io/role: operator
