refactor: rename Redis namespace from redis-infrastructure to redis
- Update namespace.yaml from redis-infrastructure to redis
- Update HelmRelease resources to deploy to redis namespace
- Update stack.yaml health checks to monitor redis namespace
- Update secret contracts to deploy to redis namespace
- Update vote and worker deployments to use redis-master.redis.svc.cluster.local
- Update component and stack documentation with correct service endpoints

Simplifies namespace naming to match component structure (redis-infrastructure -> redis).

--- a/software/components/redis/source.yaml
+++ b/software/components/redis/source.yaml
@@ -4,7 +4,7 @@ metadata:
   name: redis-bitnami
   namespace: flux-system
   labels:
-    hostk8s.component: redis-infrastructure
+    hostk8s.component: redis
 spec:
   interval: 5m
   url: oci://registry-1.docker.io/bitnamicharts/redis
@@ -17,7 +17,7 @@ metadata:
   name: redis-commander
   namespace: flux-system
   labels:
-    hostk8s.component: redis-infrastructure
+    hostk8s.component: redis
 spec:
   interval: 5m
   url: https://github.com/joeferner/redis-commander
