--- a/software/stacks/sample-app/hostk8s.secrets.yaml
+++ b/software/stacks/sample-app/hostk8s.secrets.yaml
@@ -20,7 +20,7 @@ spec:
           value: "postgresql://postgres@voting-db-rw.sample-app.svc.cluster.local:5432/voting"
     # Redis Commander web UI credentials
     - name: redis-commander-credentials
-      namespace: redis-infrastructure
+      namespace: redis
       data:
         - key: username
           value: admin
