--- a/software/components/redis/namespace.yaml
+++ b/software/components/redis/namespace.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: redis-infrastructure
+  name: redis
   labels:
-    hostk8s.component: redis-infrastructure
+    hostk8s.component: redis
     component.hostk8s.io/type: infrastructure
     component.hostk8s.io/category: database
