--- a/software/components/redis/release.yaml
+++ b/software/components/redis/release.yaml
@@ -2,9 +2,9 @@ apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: redis
-  namespace: redis-infrastructure
+  namespace: redis
   labels:
-    hostk8s.component: redis-infrastructure
+    hostk8s.component: redis
 spec:
   interval: 5m
   chartRef:
@@ -71,21 +71,21 @@ spec:
 
     # Common labels
     commonLabels:
-      hostk8s.component: redis-infrastructure
+      hostk8s.component: redis
       app: redis
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: redis-commander
-  namespace: redis-infrastructure
+  namespace: redis
   labels:
-    hostk8s.component: redis-infrastructure
+    hostk8s.component: redis
 spec:
   interval: 5m
   dependsOn:
     - name: redis
-      namespace: redis-infrastructure
+      namespace: redis
   chart:
     spec:
       chart: ./k8s/helm-chart/redis-commander
