feat: add pgAdmin4 web UI to postgres component
- Add pgAdmin4 deployment with dpage/pgadmin4:latest image
- Configure server mode with environment variables
- Add service and ingress for /postgres path access
- Update postgres kustomization.yaml to include pgAdmin4 resources
- Add pgAdmin4 credentials to sample-app secret contracts

Provides PostgreSQL administration UI at http://localhost:8080/postgres

--- a/software/components/postgres/kustomization.yaml
+++ b/software/components/postgres/kustomization.yaml
@@ -4,6 +4,9 @@ kind: Kustomization
 resources:
   - source.yaml
   - release.yaml
+  - pgadmin-deployment.yaml
+  - pgadmin-service.yaml
+  - pgadmin-ingress.yaml
 
 commonLabels:
   hostk8s.component: postgres
