--- a/software/stacks/sample-app/hostk8s.secrets.yaml
+++ b/software/stacks/sample-app/hostk8s.secrets.yaml
@@ -27,3 +27,12 @@ spec:
         - key: password
           generate: password
           length: 12
+    # pgAdmin4 web UI credentials
+    - name: pgadmin4-credentials
+      namespace: hostk8s
+      data:
+        - key: email
+          value: admin@hostk8s.dev
+        - key: password
+          generate: password
+          length: 16
