fix: correct pgAdmin4 health check probes
- Change probe path from /misc/ping to /login
- Increase initial delay to allow full startup
- Extend probe intervals for stability

Fixes pod restart loop caused by failed health checks.

--- a/software/components/postgres/pgadmin-deployment.yaml
+++ b/software/components/postgres/pgadmin-deployment.yaml
@@ -50,13 +50,13 @@ spec:
             cpu: "250m"
         livenessProbe:
           httpGet:
-            path: /misc/ping
+            path: /login
+            port: 80
+          initialDelaySeconds: 60
+          periodSeconds: 30
+        readinessProbe:
+          httpGet:
+            path: /login
             port: 80
           initialDelaySeconds: 30
           periodSeconds: 10
-        readinessProbe:
-          httpGet:
-            path: /misc/ping
-            port: 80
-          initialDelaySeconds: 10
-          periodSeconds: 5
