fix(postgres): add SCRIPT_NAME env var for pgAdmin4 sub-path routing
Add SCRIPT_NAME=/postgres environment variable to pgAdmin4 deployment
to properly handle requests when served behind nginx ingress at /postgres path.
This fixes sub-path routing issues and ensures pgAdmin4 works correctly
with the ingress configuration.

--- a/software/components/postgres/pgadmin-deployment.yaml
+++ b/software/components/postgres/pgadmin-deployment.yaml
@@ -41,6 +41,8 @@ spec:
           value: "True"
         - name: PGADMIN_CONFIG_MASTER_PASSWORD_REQUIRED
           value: "False"
+        - name: SCRIPT_NAME
+          value: "/postgres"
         resources:
           requests:
             memory: "128Mi"
