fix(postgres): correct pgAdmin4 health check probes for SCRIPT_NAME path
Update livenessProbe and readinessProbe paths from /login to /postgres/login
to match the SCRIPT_NAME=/postgres configuration. This resolves HTTP 500
errors in health checks when pgAdmin4 expects all requests to start with
the script path.

--- a/software/components/postgres/pgadmin-deployment.yaml
+++ b/software/components/postgres/pgadmin-deployment.yaml
@@ -52,13 +52,13 @@ spec:
             cpu: "250m"
         livenessProbe:
           httpGet:
-            path: /login
+            path: /postgres/login
             port: 80
           initialDelaySeconds: 60
           periodSeconds: 30
         readinessProbe:
           httpGet:
-            path: /login
+            path: /postgres/login
             port: 80
           initialDelaySeconds: 30
           periodSeconds: 10
