--- a/software/components/postgres/pgadmin-ingress.yaml
+++ b/software/components/postgres/pgadmin-ingress.yaml
@@ -7,7 +7,6 @@ metadata:
     hostk8s.component: postgres
     hostk8s.type: management-ui
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /$2
     nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
     nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
@@ -17,7 +16,7 @@ spec:
   - host: localhost
     http:
       paths:
-      - path: /postgres(/|$)(.*)
+      - path: /postgres
         pathType: ImplementationSpecific
         backend:
           service:
