fix(postgres): add upstream-vhost annotation to pgAdmin4 ingress
Add nginx.ingress.kubernetes.io/upstream-vhost: "localhost:8080" annotation
to ensure pgAdmin4 redirects to correct port after login instead of default port 80.

This resolves post-login URL generation issues where pgAdmin4 would redirect
to port 80 instead of the intended port 8080.

--- a/software/components/postgres/pgadmin-ingress.yaml
+++ b/software/components/postgres/pgadmin-ingress.yaml
@@ -10,6 +10,7 @@ metadata:
     nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
     nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
+    nginx.ingress.kubernetes.io/upstream-vhost: "localhost:8080"
 spec:
   ingressClassName: nginx
   rules:
