fix: secret architecture

--- a/software/components/postgres/kustomization.yaml
+++ b/software/components/postgres/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
   - pgadmin-deployment.yaml
   - pgadmin-service.yaml
   - pgadmin-ingress.yaml
+  - pgadmin-external-secret.yaml
 
 commonLabels:
   hostk8s.component: postgres
