fix: correct refreshInterval format in redis ExternalSecret
- Changed refreshInterval from integer 0 to string '0s' to match ESO v1 API expectations
- This resolves the type error in component-redis kustomization

--- a/software/components/redis/external-secret.yaml
+++ b/software/components/redis/external-secret.yaml
@@ -4,7 +4,7 @@ metadata:
   name: redis-commander-credentials
   namespace: redis
 spec:
-  refreshInterval: 0  # No refresh for dev environment
+  refreshInterval: "0s"  # No refresh for dev environment
   secretStoreRef:
     name: vault-backend
     kind: ClusterSecretStore
