fix: correct ExternalSecret vault path for redis-commander credentials
- Updated ExternalSecret key path from 'redis-commander' to 'sample-app/redis/redis-commander-credentials'
- This matches the actual Vault secret location created by the hostk8s.secrets.yaml processing

--- a/software/components/redis/external-secret.yaml
+++ b/software/components/redis/external-secret.yaml
@@ -13,4 +13,4 @@ spec:
     creationPolicy: Owner
   dataFrom:
     - extract:
-        key: redis-commander  # Path in Vault: secret/redis-commander
+        key: sample-app/redis/redis-commander-credentials  # Path in Vault: secret/sample-app/redis/redis-commander-credentials
