fix: resolve ExternalSecret dependency issues in sample-app stack
- Split external-secrets.yaml into namespace-specific files
- Move redis external secret to redis component (already exists)
- Add pgadmin external secret to postgres component
- Update sample-app manifests to use app-specific external secrets
- Remove external-secrets.yaml from bootstrap kustomization to prevent namespace race condition

The issue was that external-secrets.yaml was being applied before component namespaces were created

--- a/software/components/postgres/kustomization.yaml
+++ b/software/components/postgres/kustomization.yaml
@@ -4,6 +4,7 @@ kind: Kustomization
 resources:
   - source.yaml
   - release.yaml
+  - external-secret.yaml
   - pgadmin-deployment.yaml
   - pgadmin-service.yaml
   - pgadmin-ingress.yaml
