fix: correct PgAdmin ingress configuration for path-based routing
- Add X-Script-Name header to inform PgAdmin of the base path
- Add X-Scheme header for proper protocol handling
- Remove upstream-vhost annotation as it's not needed

--- a/software/components/postgres/pgadmin-ingress.yaml
+++ b/software/components/postgres/pgadmin-ingress.yaml
@@ -10,7 +10,9 @@ metadata:
     nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
     nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
-    nginx.ingress.kubernetes.io/upstream-vhost: "localhost:8080"
+    nginx.ingress.kubernetes.io/configuration-snippet: |
+      proxy_set_header X-Script-Name /postgres;
+      proxy_set_header X-Scheme $scheme;
 spec:
   ingressClassName: nginx
   rules:
