--- a/software/components/postgres/pgadmin-ingress.yaml
+++ b/software/components/postgres/pgadmin-ingress.yaml
@@ -10,16 +10,18 @@ metadata:
     nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
     nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
     nginx.ingress.kubernetes.io/configuration-snippet: |
       proxy_set_header X-Script-Name /postgres;
       proxy_set_header X-Scheme $scheme;
+      more_set_headers "X-Forwarded-Prefix: /postgres";
 spec:
   ingressClassName: nginx
   rules:
   - host: localhost
     http:
       paths:
-      - path: /postgres
+      - path: /postgres(/|$)(.*)
         pathType: ImplementationSpecific
         backend:
           service:
