--- a/software/components/postgres/pgadmin-deployment.yaml
+++ b/software/components/postgres/pgadmin-deployment.yaml
@@ -41,6 +41,18 @@ spec:
           value: "True"
         - name: PGADMIN_CONFIG_MASTER_PASSWORD_REQUIRED
           value: "False"
+        - name: SCRIPT_NAME
+          value: "/postgres"
+        - name: PGADMIN_CONFIG_PROXY_X_FOR_COUNT
+          value: "1"
+        - name: PGADMIN_CONFIG_PROXY_X_PROTO_COUNT
+          value: "1"
+        - name: PGADMIN_CONFIG_PROXY_X_HOST_COUNT
+          value: "1"
+        - name: PGADMIN_CONFIG_PROXY_X_PORT_COUNT
+          value: "1"
+        - name: PGADMIN_CONFIG_PROXY_X_PREFIX_COUNT
+          value: "1"
         resources:
           requests:
             memory: "128Mi"
@@ -50,13 +62,13 @@ spec:
             cpu: "250m"
         livenessProbe:
           httpGet:
-            path: /login
+            path: /postgres/login
             port: 80
           initialDelaySeconds: 60
           periodSeconds: 30
         readinessProbe:
           httpGet:
-            path: /login
+            path: /postgres/login
             port: 80
           initialDelaySeconds: 30
           periodSeconds: 10
