--- a/software/components/postgres/pgadmin-ingress.yaml
+++ b/software/components/postgres/pgadmin-ingress.yaml
@@ -14,10 +14,12 @@ metadata:
     nginx.ingress.kubernetes.io/configuration-snippet: |
       proxy_set_header X-Script-Name /postgres;
       proxy_set_header X-Scheme $scheme;
-      proxy_set_header Host $host;
+      proxy_set_header Host $http_host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
+      proxy_set_header X-Forwarded-Host $http_host;
+      proxy_set_header X-Forwarded-Port $server_port;
 spec:
   ingressClassName: nginx
   rules:
