feat: implement ephemeral secrets and migrate sample-app to CloudNativePG

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,10 @@ compress.md
 # Data directory (runtime artifacts, credentials, storage)
 data/
 
+# Secret generation temporary files
+*.tmp.yaml
+secrets.tmp.*
+
 # Git Worktree directories
 trees/
 
