fix: windows compatability

--- a/.env.example
+++ b/.env.example
@@ -30,6 +30,7 @@
 # METALLB_ENABLED=true                   # Manual LoadBalancer support
 # INGRESS_ENABLED=true                   # Manual NGINX Ingress Controller
 # REGISTRY_ENABLED=true                  # Local container registry
+# VAULT_ENABLED=true                     # HashiCorp Vault
 
 # =============================================================================
 # GITOPS CONFIGURATION (when FLUX_ENABLED=true)
