scripts: conversion to python

--- a/.env.example
+++ b/.env.example
@@ -31,6 +31,7 @@
 # INGRESS_ENABLED=true                   # Manual NGINX Ingress Controller
 # REGISTRY_ENABLED=true                  # Local container registry
 # VAULT_ENABLED=true                     # HashiCorp Vault
+# FLUX_ENABLED=true                      # GitOps with Flux
 
 # =============================================================================
 # GITOPS CONFIGURATION (when FLUX_ENABLED=true)
