fix: small end to end bug fixes

--- a/.env.example
+++ b/.env.example
@@ -26,11 +26,11 @@
 # INFRASTRUCTURE ADD-ONS
 # =============================================================================
 
-# FLUX_ENABLED=true                      # GitOps with Flux
+# METRICS_DISABLED=true                  # Disable metrics-server addon
 # METALLB_ENABLED=true                   # Manual LoadBalancer support
 # INGRESS_ENABLED=true                   # Manual NGINX Ingress Controller
 # REGISTRY_ENABLED=true                  # Local container registry
-# VAULT_ENABLED=true                     # HashiCorp Vault
+# VAULT_ENABLED=true                     # Vault secret management addon
 # FLUX_ENABLED=true                      # GitOps with Flux
 
 # =============================================================================
@@ -39,7 +39,10 @@
 
 # GITOPS_REPO=https://community.opengroup.org/danielscholl/hostk8s
 # GITOPS_BRANCH=main                     # Git branch to sync
-# SOFTWARE_STACK=sample                  # Stack to deploy: sample, sample-stack
+# SOFTWARE_STACK=sample                  # Stack to deploy
+# COMPONENTS_BRANCH=components           # Branch for components
+# SOFTWARE_STACK=sample-app              # Stack to deploy
+# SOFTWARE_BUILD=sample-app              # Source to build
 
 # =============================================================================
 # AI-ASSISTED GITOPS (MCP INTEGRATION)
