--- a/.env.example
+++ b/.env.example
@@ -26,11 +26,12 @@
 # INFRASTRUCTURE ADD-ONS
 # =============================================================================
 
-# FLUX_ENABLED=true                      # GitOps with Flux
+# METRICS_DISABLED=true                  # Disable metrics-server addon
 # METALLB_ENABLED=true                   # Manual LoadBalancer support
 # INGRESS_ENABLED=true                   # Manual NGINX Ingress Controller
 # REGISTRY_ENABLED=true                  # Local container registry
-# VAULT_ENABLED=true                     # HashiCorp Vault
+# VAULT_ENABLED=true                     # Vault secret management addon
+# FLUX_ENABLED=true                      # GitOps with Flux
 
 # =============================================================================
 # GITOPS CONFIGURATION (when FLUX_ENABLED=true)
@@ -38,11 +39,7 @@
 
 # GITOPS_REPO=https://community.opengroup.org/danielscholl/hostk8s
 # GITOPS_BRANCH=main                     # Git branch to sync
-# SOFTWARE_STACK=sample                  # Stack to deploy: sample, sample-stack
-
-# =============================================================================
-# AI-ASSISTED GITOPS (MCP INTEGRATION)
-# =============================================================================
-
-# FLUX_MCP_ENABLED=true                  # Enable Flux MCP server for AI assistance
-# FLUX_MCP_READ_ONLY=false               # Set to true for read-only operations
+# SOFTWARE_STACK=sample                  # Stack to deploy
+# COMPONENTS_BRANCH=components           # Branch for components
+# SOFTWARE_STACK=sample-app              # Stack to deploy
+# SOFTWARE_BUILD=sample-app              # Source to build
