--- a/.env.example
+++ b/.env.example
@@ -39,7 +39,7 @@
 
 # GITOPS_REPO=https://community.opengroup.org/danielscholl/hostk8s
 # GITOPS_BRANCH=main                     # Git branch to sync
-# SOFTWARE_STACK=sample                  # Stack to deploy
+# COMPONENTS_REPO=https://community.opengroup.org/danielscholl/hostk8s  # Git repository URL for infrastructure components
 # COMPONENTS_BRANCH=components           # Branch for components
-# SOFTWARE_STACK=sample-app              # Stack to deploy
+# SOFTWARE_STACK=sample                  # Stack to deploy
 # SOFTWARE_BUILD=sample-app              # Source to build
