bug: UX on deploys

--- a/.env.example
+++ b/.env.example
@@ -42,4 +42,5 @@
 # COMPONENTS_REPO=https://community.opengroup.org/danielscholl/hostk8s  # Git repository URL for infrastructure components
 # COMPONENTS_BRANCH=components           # Branch for components
 # SOFTWARE_STACK=sample                  # Stack to deploy
-# SOFTWARE_BUILD=sample-app              # Source to build
+# SOFTWARE_BUILD=sample-app              # Source to build (default: sample-app)
+# SOFTWARE_APP=simple                    # Default app for deploy/remove
