bug: make build issues

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,16 @@
 # Most settings have sensible defaults - only override what you need
 
 # =============================================================================
+# BUILD CONFIGURATION
+# =============================================================================
+
+# Enable multi-platform ARM64 builds on Windows ARM (opt-in for compatibility)
+# ENABLE_ARM64_BUILDS=true
+
+# Registry URL override for builds (auto-detected by default)
+# REGISTRY_URL=localhost:5002
+
+# =============================================================================
 # LOGGING
 # =============================================================================
 
