fix: Add Windows-compatible PostgreSQL configuration
- Add security context with fsGroup 999 and fsGroupChangePolicy "Always"
- Include initdb options for trust authentication
- Forces Kubernetes to change volume ownership to postgres user
- Should resolve Windows NTFS permission issues with PostgreSQL data directory
- Maintains cross-platform compatibility

Addresses Windows Docker Desktop bind mount permission limitations where
NTFS → Linux container mounts don't support POSIX ownership changes.

--- a/software/stacks/sample-app/manifests/database.yaml
+++ b/software/stacks/sample-app/manifests/database.yaml
@@ -25,6 +25,10 @@ spec:
       encoding: UTF8
       localeCollate: en_US.utf8
       localeCType: en_US.utf8
+      # Fix Windows permissions by setting PostgreSQL to run as postgres user
+      options:
+        - "--auth-local=trust"
+        - "--auth-host=trust"
 
       # Initialize with voting app schema
       postInitSQL:
@@ -75,5 +79,12 @@ spec:
 
   # Disable superuser access - not needed for local development with trust auth
   enableSuperuserAccess: false
+
+  # Security context for Windows compatibility
+  podSecurityContext:
+    runAsUser: 999
+    runAsGroup: 999
+    fsGroup: 999
+    fsGroupChangePolicy: "Always"
 
   # Monitoring disabled for local dev (omit monitoring section to disable)
