fix: Use standard storage class for Windows PostgreSQL compatibility
- Changed from hostPath to standard storage class for PostgreSQL
- Resolves Windows Docker Desktop bind mount permission issues
- Trade-off: Loses host-visible data but gains cross-platform reliability
- Data still persists across pod restarts within cluster lifecycle

Windows Docker Desktop cannot properly handle POSIX ownership changes
on NTFS bind mounts, causing PostgreSQL initdb to fail with permission
denied errors. Standard storage class works reliably on all platforms.

--- a/software/stacks/sample-app/manifests/database.yaml
+++ b/software/stacks/sample-app/manifests/database.yaml
@@ -48,10 +48,11 @@ spec:
       memory: 256Mi
       cpu: 200m
 
-  # Storage configuration using hostPath PV
+  # Storage configuration - use standard storage for Windows compatibility
+  # Note: This sacrifices host-visible data but ensures cross-platform operation
   storage:
     size: 1Gi
-    storageClass: sample-app-postgres
+    storageClass: standard
     pvcTemplate:
       accessModes:
         - ReadWriteOnce
