feat: Implement Docker volume-based PostgreSQL persistence
- Mount Docker volume hostk8s-postgres-data to Kind cluster
- Update Kind configuration to use Docker volume instead of host bind mount
- Switch database back to sample-app-postgres storage class
- Provides cross-platform persistent storage via Docker volume
- Data survives cluster stop/start cycles on both Windows and Mac

This resolves Windows PostgreSQL permission issues while maintaining
data persistence across all platforms.

--- a/infra/kubernetes/kind-custom.yaml
+++ b/infra/kubernetes/kind-custom.yaml
@@ -55,7 +55,7 @@ nodes:
       - hostPath: ./data/pv
         containerPath: /mnt/pv
         readOnly: false
-      - hostPath: ./data/postgres
+      - hostPath: /var/lib/docker/volumes/hostk8s-postgres-data/_data
         containerPath: /mnt/postgres
         readOnly: false
 
