refactor: Implement universal Docker volume storage architecture
BREAKING: Architectural refactor to proper component-based storage

Changes:
- Replace PostgreSQL-specific infrastructure with universal /mnt/pv mount
- Move storage definitions from stacks to postgres component
- Create universal hostk8s-pv-data Docker volume mounted to /mnt/pv
- Remove hardcoded postgres paths from Kind configuration
- Components now own their storage requirements declaratively

Benefits:
- Proper separation of concerns (components define storage needs)
- Universal approach works for any component requiring persistence
- No tight coupling between infrastructure and specific services
- Easier to add new components with storage needs
- Cross-platform Docker volume approach for Windows/Mac compatibility

Components can now define storage under /mnt/pv/{component-name}/
without requiring infrastructure-level service-specific logic.

--- a/software/stacks/sample-app/manifests/database.yaml
+++ b/software/stacks/sample-app/manifests/database.yaml
@@ -48,10 +48,10 @@ spec:
       memory: 256Mi
       cpu: 200m
 
-  # Storage configuration using Docker volume for cross-platform persistence
+  # Storage configuration - use component-defined storage
   storage:
     size: 1Gi
-    storageClass: sample-app-postgres
+    storageClass: postgres-component
     pvcTemplate:
       accessModes:
         - ReadWriteOnce
