--- a/software/components/postgres/kustomization.yaml
+++ b/software/components/postgres/kustomization.yaml
@@ -4,6 +4,7 @@ kind: Kustomization
 resources:
   - source.yaml
   - release.yaml
+  - storage.yaml
   - external-secret.yaml
   - pgadmin-deployment.yaml
   - pgadmin-service.yaml
