--- a/software/components/postgres/pgadmin-deployment.yaml
+++ b/software/components/postgres/pgadmin-deployment.yaml
@@ -22,11 +22,13 @@ spec:
     spec:
       containers:
       - name: pgadmin4
-        image: dpage/pgadmin4:latest
+        image: dpage/pgadmin4:8.11
         ports:
-        - containerPort: 80
+        - containerPort: 5050
           name: http
         env:
+        - name: PGADMIN_LISTEN_PORT
+          value: "5050"
         - name: PGADMIN_DEFAULT_EMAIL
           valueFrom:
             secretKeyRef:
@@ -55,20 +57,22 @@ spec:
           value: "1"
         resources:
           requests:
-            memory: "128Mi"
-            cpu: "100m"
-          limits:
             memory: "512Mi"
             cpu: "250m"
+          limits:
+            memory: "1Gi"
+            cpu: "500m"
         livenessProbe:
           httpGet:
             path: /postgres/login
-            port: 80
-          initialDelaySeconds: 60
+            port: 5050
+          initialDelaySeconds: 120
           periodSeconds: 30
+          timeoutSeconds: 5
         readinessProbe:
           httpGet:
             path: /postgres/login
-            port: 80
-          initialDelaySeconds: 30
-          periodSeconds: 10
+            port: 5050
+          initialDelaySeconds: 90
+          periodSeconds: 15
+          timeoutSeconds: 5
