--- a/software/components/postgres/pgadmin-deployment.yaml
+++ b/software/components/postgres/pgadmin-deployment.yaml
@@ -57,11 +57,11 @@ spec:
           value: "1"
         resources:
           requests:
+            memory: "256Mi"
+            cpu: "100m"
+          limits:
             memory: "512Mi"
             cpu: "250m"
-          limits:
-            memory: "1Gi"
-            cpu: "500m"
         livenessProbe:
           httpGet:
             path: /postgres/login
