feat: ingress on by default

--- a/.env.example
+++ b/.env.example
@@ -37,8 +37,8 @@
 # =============================================================================
 
 # METRICS_DISABLED=true                  # Disable metrics-server addon
+# INGRESS_DISABLED=true                  # Disable NGINX Ingress Controller
 # METALLB_ENABLED=true                   # Manual LoadBalancer support
-# INGRESS_ENABLED=true                   # Manual NGINX Ingress Controller
 # REGISTRY_ENABLED=true                  # Local container registry
 # VAULT_ENABLED=true                     # Vault secret management addon
 # FLUX_ENABLED=true                      # GitOps with Flux
