fix: remove deprecated telemetry.v2.prometheus.configOverride in istiod
The configOverride option was deprecated and removed in Istio 1.27+.
Updated to use the new telemetry.v2.prometheus.service configuration
for Ambient mode compatibility.

--- a/software/components/istio/base/release-istiod.yaml
+++ b/software/components/istio/base/release-istiod.yaml
@@ -67,14 +67,11 @@ spec:
           service: prometheus.istio-system.svc.cluster.local
           port: 9090
 
-    # Telemetry v2 configuration (minimal)
+    # Telemetry configuration (minimal for Ambient mode)
     telemetry:
       v2:
+        enabled: true
         prometheus:
-          configOverride:
-            inboundSidecar:
-              disable: true
-            outboundSidecar:
-              disable: true
-            gateway:
-              disable: false  # Keep gateway metrics
+          service:
+            enabled: true
+          # configOverride is deprecated in Istio 1.27+
